crates/plotnik-tests/tests/02-parser/recovery_validation/field_name_with_hyphens.txt
Q = (call foo-bar: (x))
------------------ DIAGNOSTICS -------------------
error: field names must be snake_case
 --> query.ptk:1:11
  |
1 | Q = (call foo-bar: (x))
  |           ^^^^^^^
  |
help: use `foo_bar`
  |
1 - Q = (call foo-bar: (x))
1 + Q = (call foo_bar: (x))
  |
help: fields come from the grammar and are snake_case
